--- a/CourtApp.Web/Views/Shared/Components/Sidebar/Default.cshtml
+++ b/CourtApp.Web/Views/Shared/Components/Sidebar/Default.cshtml
@@ -104,13 +104,13 @@
                             
 
                             <li class="nav-item">
-                                <a is-active-route asp-area="LawyerDiary" asp-controller="CourtMaster" asp-action="index" class="nav-link">
+                                <a is-active-route asp-area="LawyerDiary" asp-controller="CourtDistrict" asp-action="index" class="nav-link">
                                     <i class="far fa-circle nav-icon"></i>
                                     <p>@localizer["Court District"]</p>
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a is-active-route asp-area="LawyerDiary" asp-controller="CourtMaster" asp-action="index" class="nav-link">
+                                <a is-active-route asp-area="LawyerDiary" asp-controller="CourtComplex" asp-action="index" class="nav-link">
                                     <i class="far fa-circle nav-icon"></i>
                                     <p>@localizer["Court Complex"]</p>
                                 </a>
