--- a/CourtApp.Web/Areas/LawyerDiary/Views/ProceedingSubHead/_ViewAll.cshtml
+++ b/CourtApp.Web/Areas/LawyerDiary/Views/ProceedingSubHead/_ViewAll.cshtml
@@ -18,7 +18,7 @@
         {
             <tr>
                 <td>
-                    @bt.ProceedingHead.Name_En
+                    @bt.Head
                 </td>
                 <td>
                     @bt.Name_En
