--- a/CourtApp.Web/Areas/LawyerDiary/Views/CourtMaster/Index.cshtml
+++ b/CourtApp.Web/Areas/LawyerDiary/Views/CourtMaster/Index.cshtml
@@ -5,15 +5,15 @@
 @model CourtMasterViewModel
 <div class="card">
     <div class="col-sm-12" style="padding:20px">
-        @*@if ((AuthorizationService.AuthorizeAsync(User, Permissions.Brands.Create)).Result.Succeeded)
+        @if ((AuthorizationService.AuthorizeAsync(User, Permissions.Brands.Create)).Result.Succeeded)
             {
                 <a onclick="jQueryModalGet('/lawyerdiary/CourtMaster/OnGetCreateOrEdit','Create Court')" class="btn bg-success">
                     <i class="fa fa-plus-square"></i> Create
                 </a>
-            }*@
-        <a asp-area="lawyerdiary" asp-controller="CourtMaster" asp-action="CreateOrUpdate" class="btn bg-success">
+            }
+        @* <a asp-area="lawyerdiary" asp-controller="CourtMaster" asp-action="CreateOrUpdate" class="btn bg-success">
             <i class="fa fa-plus-square"></i> Create
-        </a>
+        </a> *@
 
         <a id="reload" class="btn btn-primary text-white">
             <i class="fa fas fa-bolt"></i>
