--- a/CourtApp.Web/Areas/LawyerDiary/Views/CourtMaster/_CreateOrEdit.cshtml
+++ b/CourtApp.Web/Areas/LawyerDiary/Views/CourtMaster/_CreateOrEdit.cshtml
@@ -2,23 +2,34 @@
     ViewData["Title"] = localizer["Add New Court"];
     ViewData["Caption"] = localizer["Manage Court"];
 }
+<style>
+    .div_hide {
+        display: none
+    }
+
+    fieldset.scheduler-border {
+        border: 1px groove #ddd !important;
+        padding: 0 1.4em 1.4em 1.4em !important;
+        margin: 0 0 1.5em 0 !important;
+        -webkit-box-shadow: 0px 0px 0px 0px #000;
+        box-shadow: 0px 0px 0px 0px #000;
+        width: 100% !important;
+    }
+
+    legend.scheduler-border {
+        font-size: 1.2em !important;
+        font-weight: bold !important;
+        text-align: left !important;
+        width: auto;
+        padding: 0 10px;
+        border-bottom: none;
+    }
+</style>
 @model CourtMasterViewModel
-<hr />
 <form id="create-form" method="post" asp-controller="CourtMaster" asp-action="OnPostCreateOrEdit"
       asp-route-id="@Model.Id" onsubmit="return jQueryModalPost(this);" enctype="multipart/form-data">
     <div class="row">
         <div class="col-md-12">
-            <div class="form-group row">
-                <label class="col-md-3 col-form-label">Court Type</label>
-                <div class="col-md-9">
-                    <div class="input-group">
-                        <select name="CourtTypeId" class="form-control select2bs4" id="CourtTypeId" asp-for="CourtTypeId" placeholder="Select Court Type" asp-items="@Model.CourtTypes">
-                            <option></option>
-                        </select>
-                    </div>
-                    <span asp-validation-for="CourtTypeId" class="text-danger"></span>
-                </div>
-            </div>
             <div class="form-group row">
                 <label class="col-md-3 col-form-label">State</label>
                 <div class="col-md-9">
@@ -32,7 +43,19 @@
                 </div>
             </div>
             <div class="form-group row">
-                <label class="col-md-3 col-form-label">District</label>
+                <label class="col-md-3 col-form-label">Court Type</label>
+                <div class="col-md-9">
+                    <div class="input-group">
+                        <select name="CourtTypeId" class="form-control select2bs4" id="CourtTypeId" asp-for="CourtTypeId" placeholder="Select Court Type" asp-items="@Model.CourtTypes">
+                            <option></option>
+                        </select>
+                    </div>
+                    <span asp-validation-for="CourtTypeId" class="text-danger"></span>
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <label class="col-md-3 col-form-label">@localizer["District"]</label>
                 <div class="col-md-9">
                     <div class="input-group">
                         <select name="DistrictCode" class="form-control select2bs4" id="DistrictCode" asp-for="DistrictCode"
@@ -42,47 +65,62 @@
                     <span asp-validation-for="DistrictCode" class="text-danger"></span>
                 </div>
             </div>
-
-            <div class="form-group row">
-                <label class="col-md-3 col-form-label">Court Name</label>
+            <div class="form-group row div_hide" id="c_district">
+                <label class="col-md-3 col-form-label">@localizer["Court District"]</label>
                 <div class="col-md-9">
                     <div class="input-group">
-                        <input type="text" asp-for="CourtName" name="CourtName" class="form-control">
+                        <select name="CourtDistrictId" class="form-control select2bs4" id="CourtDistrictId" asp-for="CourtDistrictId"
+                                asp-items="@Model.CourtDistricts">
+                        </select>
+                    </div>
+                    <span asp-validation-for="CourtDistrictId" class="text-danger"></span>
+                </div>
+            </div>
+
+            <div class="form-group row div_hide" id="d_court_Complex">
+                <label class="col-md-3 col-form-label">@localizer["Court Complex"]</label>
+                <div class="col-md-9">
+                    <div class="input-group">
+                        <select name="CourtComplexId" class="form-control select2bs4" id="CourtComplexId" asp-for="CourtComplexId"
+                                asp-items="@Model.CourtDistricts">
+                        </select>
+                    </div>
+                    <span asp-validation-for="CourtComplexId" class="text-danger"></span>
+                </div>
+            </div>
+
+            <div class="form-group row div_hide" id="d_high_court_name">
+                <label class="col-md-3 col-form-label">High Court Name</label>
+                <div class="col-md-9">
+                    <div class="input-group">
+                        <input type="text" placeholder="Please enter high court name" asp-for="CourtName" name="CourtName" class="form-control">
                     </div>
                     <span asp-validation-for="CourtName" class="text-danger"></span>
                 </div>
             </div>
-
             <div class="form-group row">
-                <label class="col-md-3 col-form-label">Bench</label>
-                <div class="col-md-9">
-                    <div class="input-group">
-                        <input type="text" asp-for="Bench" name="Bench" class="form-control">
-                    </div>
-                    <span asp-validation-for="Bench" class="text-danger"></span>
-                </div>
+                <fieldset class="scheduler-border">
+                    <legend class="scheduler-border">Court/Bench Detail</legend>
+                    <table id="tblCourtBench" border="1" style="width:100%!important">
+                        <thead>
+                            <tr>
+                                <th width="30%"><label class="col-md-3 col-form-label">Court/Bench</label></th>
+                                <th width="60%"><label class="col-md-3 col-form-label">Address</label></th>
+                                <th width="10%"></th>
+                            </tr>
+                        </thead>
+                        <tbody class="data-repeater">
+                            <tr class="kolom">
+                                <td><input type="text" asp-for="CBAddress[0].Court_Bench_Name" width="300px" placeholder="Enter court/Bench name" class="form-control" /></td>
+                                <td><input type="text" asp-for="CBAddress[0].Court_Bench_Address" width="300px" placeholder="Enter court/Bench adress" class="form-control" /></td>
+                                <td class="btn-repeater">
+                                    <button class="add-btn-repeat btn btn-success" onclick="addElement($(this))" type="button"><i class="fa fa-plus" aria-hidden="true"></i></button>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </fieldset>
             </div>
-            <div class="form-group row">
-                <label class="col-md-3 col-form-label">Head Querter</label>
-                <div class="col-md-9">
-                    <div class="input-group">
-                        <input type="text" asp-for="HeadQuerter" name="HeadQuerter" class="form-control">
-                    </div>
-                    <span asp-validation-for="HeadQuerter" class="text-danger"></span>
-                </div>
-            </div>
-
-            <div class="form-group row">
-                <label class="col-md-3 col-form-label">Court Address</label>
-                <div class="col-md-9">
-                    <div class="input-group">
-                        <textarea asp-for="Address" name="Address" class="form-control"></textarea>
-                    </div>
-                    <span asp-validation-for="Address" class="text-danger"></span>
-                </div>
-            </div>
-
-
             <div class="form-group row">
                 <div class="col-md-3">
                 </div>
@@ -97,43 +135,112 @@
 </form>
 <script type="text/javascript" language=javascript>
     $.validator.unobtrusive.parse(document);
-</script>
-@section Scripts
-{
-    <script>
-        function goPrev() {
-            window.history.back();
+    $("#CourtTypeId").select2({
+        placeholder: "Select a court type",
+        theme: "bootstrap4",
+        escapeMarkup: function (m) {
+            return m;
         }
-        $(document).ready(function () {
-            $("#CourtTypeId").select2({
-                placeholder: "Select a court type",
-                theme: "bootstrap4",
-                escapeMarkup: function (m) {
-                    return m;
-                }
-            });
-            $("#StateCode").select2({
-                placeholder: "Select a state",
-                theme: "bootstrap4",
-                escapeMarkup: function (m) {
-                    return m;
-                }
-            });
-            $("#DistrictCode").select2({
-                placeholder: "Select a district",
-                theme: "bootstrap4",
-                escapeMarkup: function (m) {
-                    return m;
-                }
-            });
-            $("#StateCode").on("change", function () {
-                $("#DistrictCode").empty();
-                $.getJSON("/LawyerDiary/CourtMaster/LoadDistricts?StateCode=" + $("#StateCode").val(), function (data) {
-                    $.each(data.Data, function (i, item) {
-                        $("#DistrictCode").append(`<option /><option value="${item.Code}">${item.Name_En}</option>`);
-                    });
-                });
+    });
+    $("#StateCode").select2({
+        placeholder: "Select a state",
+        theme: "bootstrap4",
+        escapeMarkup: function (m) {
+            return m;
+        }
+    });
+    $("#DistrictCode").select2({
+        placeholder: "Select a district",
+        theme: "bootstrap4",
+        escapeMarkup: function (m) {
+            return m;
+        }
+    });
+    $("#CourtDistrictId").select2({
+        placeholder: "Select a district court",
+        theme: "bootstrap4",
+        escapeMarkup: function (m) {
+            return m;
+        }
+    });
+    $("#CourtComplexId").select2({
+        placeholder: "Select a complex",
+        theme: "bootstrap4",
+        escapeMarkup: function (m) {
+            return m;
+        }
+    });
+
+    $("#CourtTypeId").on("change", function () {
+        if ($("#CourtTypeId").val() === "359acb34-7b8c-4fc8-a276-8b198ea5105c") {
+            $('#c_district').addClass('div_hide');
+            $('#d_court_Complex').addClass('div_hide');
+            $('#d_high_court_name').removeClass('div_hide');
+        }
+        else {
+            $('#c_district').addClass('div_hide');
+            $('#d_court_Complex').addClass('div_hide');
+            $('#c_district').removeClass('div_hide');
+            $('#d_court_Complex').removeClass('div_hide');
+            $('#d_high_court_name').addClass('div_hide');
+        }
+
+        $.getJSON("/LawyerDiary/CourtMaster/LoadDistricts?StateCode=" + $("#StateCode").val(), function (data) {
+            $("#DistrictCode").empty();
+            $.each(data.Data, function (i, item) {
+                $("#DistrictCode").append(`<option /><option value="${item.Code}">${item.Name_En}</option>`);
             });
         });
-    </script>
-} 
+    });
+    $("#DistrictCode").on("change", function () {
+        $.getJSON("/LawyerDiary/CourtMaster/LoadCourtDistrict?DistrictId=" + $("#DistrictCode").val(), function (data) {
+            $("#CourtDistrictId").empty();
+            $.each(data.Data, function (i, item) {
+                $("#CourtDistrictId").append(`<option /><option value="${item.Code}">${item.Name_En}</option>`);
+            });
+        });
+    });
+
+    $("#CourtDistrictId").on("change", function () {
+        $.getJSON("/LawyerDiary/CourtMaster/LoadCourtComplex?CDistrictId=" + $("#CourtDistrictId").val(), function (data) {
+            $("#CourtComplexId").empty();
+            $.each(data.Data, function (i, item) {
+                $("#CourtComplexId").append(`<option /><option value="${item.Id}">${item.Name_En}</option>`);
+            });
+        });
+    });
+
+    var btn_delete = '<button type="button" onclick="removeKolom($(this))" class="btn btn-warning"><i class="fa fa-trash" aria-hidden="true"></i></button>';
+    var btn_add = '<button class="add-btn-repeat btn btn-success" onclick="addElement($(this))" type="button"><i class="fa fa-plus" aria-hidden="true"></i></button>';
+
+    function removeKolom(e) {
+        e.parents('.kolom').remove();
+    }
+
+    function addElement(e) {
+        var trlength = $('#tblCourtBench tbody tr').length;
+        var clonedRow = $('#tblCourtBench tbody tr:last').clone();        
+        //clonedRow.find('input').attr('name', "CBAddress[" + trlength + "].Court_Bench_Name").attr('id', NameId)
+        //clonedRow.find('input').attr('name', "CBAddress[" + trlength + "].Court_Bench_Address").attr('id', AddressId);
+        clonedRow.find('input').each(function (i) {
+            var BName = "", BenchId;
+            if (i === 0) {
+                NameAtr = "CBAddress[" + trlength + "].Court_Bench_Name";
+                IdAtr = "CBAddress_" + trlength + "__Court_Bench_Name";
+            }
+            if (i === 1) {
+                NameAtr = "CBAddress[" + trlength + "].Court_Bench_Address";
+                IdAtr = "CBAddress_" + trlength + "__Court_Bench_Address";
+            }
+            $(this).attr('name', NameAtr).attr('id', IdAtr);
+        });
+        clonedRow.find('button').find('button').replaceWith(btn_add);
+        clonedRow.find('button.add-btn-repeat').replaceWith(btn_delete);
+        clonedRow.find("input").val("");
+        $('#tblCourtBench tbody').append(clonedRow);
+        // var newElement = $(".kolom").last().clone();
+        //$(".kolom").find('button.add-btn-repeat').replaceWith(btn_delete);
+        //newElement.appendTo(".data-repeater").find('button').replaceWith(btn_add);
+    }
+
+</script>
