--- a/CourtApp.Web/Areas/LawyerDiary/Views/ProceedingHead/Index.cshtml
+++ b/CourtApp.Web/Areas/LawyerDiary/Views/ProceedingHead/Index.cshtml
@@ -24,7 +24,8 @@
 {
     <script src="~/js/site.js"></script>
     <script>
-        $(document).ready(function () {            
+        $(document).ready(function () {
+            $("#tblProceedingHead").DataTable();
             loadData();
             $('#reload').on('click', function () {
                 loadData();
@@ -33,5 +34,5 @@
         function loadData() {
             $('#viewAll').load('/LawyerDiary/ProceedingHead/LoadAll');
         }
-    </script>
+    </script>    
 }
