--- a/CourtApp.Web/Areas/LawyerDiary/Views/ProceedingHead/_CreateOrEdit.cshtml
+++ b/CourtApp.Web/Areas/LawyerDiary/Views/ProceedingHead/_CreateOrEdit.cshtml
@@ -16,7 +16,7 @@
                 <label class="col-md-3 col-form-label">@localizer["Name(Hn)"]</label>
                 <div class="col-md-9">
                     <div class="input-group">
-                        <input type="text" asp-for="Name_Hn" name="Name_En" id="Name_Hn" class="form-control" />
+                        <input type="text" placeholder="Please enter name (En)" asp-for="Name_Hn" name="Name_Hn" id="Name_Hn" class="form-control" />
                     </div>
                     <span asp-validation-for="Name_Hn" class="text-danger"></span>
                 </div>
@@ -33,4 +33,7 @@
         <button type="submit" class="btn btn-default close-button" data-dismiss="modal">Cancel</button>
     </div>
 </form>
+<script type="text/javascript" language=javascript>
+    $.validator.unobtrusive.parse(document);
+</script>
 
