--- a/CourtApp.Web/Areas/Litigation/Views/CaseManage/_CreateOrEdit.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/CaseManage/_CreateOrEdit.cshtml
@@ -18,7 +18,39 @@
                             </div>
                             <span asp-validation-for="InstitutionDate" class="text-danger"></span>
                         </div>
-                        <label class="col-md-2 col-form-label">@localizer["Nature Of Case"] (<span style="color:red">*</span>)</label>
+                        <label class="col-md-2 col-form-label">@localizer["Court Type"] (<span style="color:red">*</span>)</label>
+                        <div class="col-md-4">
+                            <div class="input-group">
+                                <select name="CourtTypeId" class="form-control select2bs4" id="CourtTypeCode" asp-for="CourtTypeId" asp-items="@Model.CourtTypes">
+                                    <option></option>
+                                </select>
+                            </div>
+                            <span asp-validation-for="CourtTypeId" class="text-danger"></span>
+                        </div>                        
+                    </div>
+                    <div class="form-group row">
+                        <label class="col-md-2 col-form-label">@localizer["Court District"] (<span style="color:red">*</span>)</label>
+                        <div class="col-md-4">
+                            <div class="input-group">
+                                <select name="CourtDistrictId" class="form-control select2bs4" id="CourtDistrictId" asp-for="CourtDistrictId" asp-items="@Model.CourtDistricts">
+                                    <option></option>
+                                </select>
+                            </div>
+                            <span asp-validation-for="CourtDistrictId" class="text-danger"></span>
+                        </div>
+                        <label class="col-md-2 col-form-label">@localizer["Court Complex"] (<span style="color:red">*</span>)</label>
+                        <div class="col-md-4">
+                            <div class="input-group">
+                                <select name="ComplexBenchId" class="form-control select2bs4" id="ComplexBenchId" asp-for="ComplexBenchId" asp-items="@Model.ComplexBenchs">
+                                    <option></option>
+                                </select>
+                            </div>
+                            <span asp-validation-for="ComplexBenchId" class="text-danger"></span>
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label class="col-md-2 col-form-label">@localizer["Case Category"] (<span style="color:red">*</span>)</label>
                         <div class="col-md-4">
                             <div class="input-group">
                                 <select name="NatureId" class="form-control select2bs4" id="CaseNatureId" asp-for="NatureId" asp-items="@Model.CaseNatures">
@@ -27,9 +59,7 @@
                             </div>
                             <span asp-validation-for="NatureId" class="text-danger"></span>
                         </div>
-                    </div>
 
-                    <div class="form-group row">
                         <label class="col-md-2 col-form-label">@localizer["Case Type"] (<span style="color:red">*</span>)</label>
                         <div class="col-md-4">
                             <div class="input-group">
@@ -40,15 +70,7 @@
                             <span asp-validation-for="CaseTypeId" class="text-danger"></span>
                         </div>
 
-                        <label class="col-md-2 col-form-label">@localizer["Court Type"] (<span style="color:red">*</span>)</label>
-                        <div class="col-md-4">
-                            <div class="input-group">
-                                <select name="CourtTypeId" class="form-control select2bs4" id="CourtTypeCode" asp-for="CourtTypeId" asp-items="@Model.CourtTypes">
-                                    <option></option>
-                                </select>
-                            </div>
-                            <span asp-validation-for="CourtTypeId" class="text-danger"></span>
-                        </div>
+                        
                     </div>
                     <div class="form-group row">
                         <label class="col-md-2 col-form-label">@localizer["Court Name"] (<span style="color:red">*</span>)</label>
